--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root{
+    --checkbox-size: {
+        width: 1.5rem;
+        height: 1.5rem;
+    };
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
